# lightning-fastapi

./: .env  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.cursor/rules/: python-fastapi.mdc
.github/workflows/: deploy-staging.yml
app/: enable_rls_for_existing_tables.py  main.py
app/alembic/: enable_rls.py  env.py  rls_commands.py  script.py.mako
app/alembic/versions/: README.md  initial_migration.py
app/api/: depends.py  main.py
app/api/routes/: todo.py  user.py
app/core/: db.py
app/crud/: SMSCodeRecordCRUD.py  TodoCRUD.py
app/models/: table.py
app/models/base_models/: Base.py  RLSBase.py  SMSCodeRecordBase.py  TodoBase.py  UserBase.py
config/: .env  .env.staging
docker/: Dockerfile  docker-compose-local.yml  docker-compose-quickstart.yml  docker-compose.yml
docs/: DUAL_USAGE.md  PUBLISH.md
lightning_fastapi/: __init__.py  cli.py  generator.py
scripts/: deploy.sh  fix_migration.sh  quickstart.sh  start.sh
